Change Durbin == TRUE to isTRUE(Durbin) and class(Durbin) == "formula" to inherits(Durbin, "formula") and other minor changes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,8 @@ export(stslshac)
 import(Matrix)
 import(mvtnorm)
 import(nlme)
+import(sf)
+import(spData)
 import(spatialreg,  except = c(impacts, impacts.stsls))
 importFrom(coda,as.mcmc)
 importFrom(methods,as)
