--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,7 @@
 Package: sphet
-Version: 2.0
-Date: 2022-01-05
+Version: 2.0.3
+Encoding: UTF-8
+Date: 2022-10-25
 Title: Estimation of Spatial Autoregressive Models with and without Heteroskedastic Innovations
 Authors@R: c(person(given = "Gianfranco", family = "Piras", role = c("aut", "cre"), email = "gpiras@mac.com",comment=c(ORCID="0000-0003-0225-6061")),person(given = "Roger", family = "Bivand", role = c("ctb"), email = "Roger.Bivand@nhh.no", comment=c(ORCID="0000-0003-2392-6140")))
 Depends: R (>= 3.0.1)
@@ -12,4 +13,4 @@ Description: Functions for fitting Cliff-Ord-type spatial autoregressive models 
 License: GPL-2
 LazyLoad: yes
 LazyData: no
-RoxygenNote: 7.2.0
+RoxygenNote: 7.2.1
