revert to correct propagation on impacts methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,7 @@ import(mvtnorm)
 import(nlme)
 import(sf)
 import(spData)
-import(spatialreg,  except = c(impacts, impacts.stsls))
+import(spatialreg)
 importFrom(coda,as.mcmc)
 importFrom(methods,as)
 importFrom(methods,new)
